Fixed bug #10304: Links in the warning box are not visible as links (thanks to Georg Ringer)
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/branches/TYPO3_4-2@4887 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/stylesheet.css
+++ b/typo3/stylesheet.css
@@ -2383,6 +2383,10 @@ table.warningbox td {
 	font-weight: bold;
 }
 
+table.warningbox td a {
+	text-decoration: underline;
+}
+
 div.warningbox {
 	border: solid 2px black;
 	background-color: yellow;
